2004-05-13  Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugins/message-view/plugin.c: Fixed glade file loading
	* src/anjuta-app.c: Fixed crash bug, g_free(filename was called
	twice because of this load system layout hack.

2004-05-12  Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugins/message-view/*: Fixed message view preferences
	* plugins/message-view/message_prefs.glade: unmerged from anjuta.glade
	* anjuta.glade: Removed messages stuff

2004-05-12  Johannes Schmid <jhs@cvs.gnome.org>
	
	* Removed libanjutamm, it is now hosted on SF.net:
	cvs.sf.net/cvsroot/anjuta/libanjutamm

2004-05-11  Johannes Schmid  <jhs@cvs.gnome.org>
	
	* libanjutamm/*
	Added some experimental code to add support for C++ plugins.
	Nothing works yet and it is likely that it will disappear but
	I have some questions to murrayc and he wants to see the code.

2004-05-11  Naba Kumar  <naba@gnome.org>

	* plugins/terminal/terminal.c: Fixed prefs loading bug.

	* plugins/editor/action-callbacks.c: Fixed a crash bug in
	hightlight style menu actions.

	* manuals/reference/libanjuta/libanjuta-docs.sgml,
	manuals/reference/libanjuta/plugin-description-file.sgml,
	manuals/reference/libanjuta/writing-plugins.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-plugin.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-preferences.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-iterable.sgml: Updated docs.

	* src/anjuta-app.c: Always load system layout for now.

	* libanjuta/anjuta-shell.h, libanjuta/gnomefilelist.h: Fixed format.
	
	* manuals/reference/libanjuta/libanjuta-docs.sgml,
	manuals/reference/libanjuta/libanjuta-sections.txt,
	manuals/reference/libanjuta/libanjuta.types,
	manuals/reference/libanjuta/tmpl/anjuta-plugin.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-preferences.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-utils.sgml,
	manuals/reference/libanjuta/tmpl/fileselection.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-iterable.sgml,