@@ -7,6 +7,6 @@ idldir=@datadir@/idl/libanjuta-1.0
 Name: libanjuta
 Description: Libraries for developing Anjuta plugins.
 Version: @VERSION@
-Requires:  libbonoboui-2.0 libgnome-2.0 gtk+-2.0 libxml-2.0 libglade-2.0 gdl-1.0
+Requires:  libbonoboui-2.0 libgnome-2.0 libgnomeui-2.0 gtk+-2.0 libxml-2.0 libglade-2.0 gdl-1.0
 Libs: -L${libdir} -lanjuta
 Cflags: -I${includedir}
